Fixed up layout issues. Removed IndexDT as opting to use my server side rendering to control data loaded. Updated the jobDataTable to use MyJobs as this list will be much smaller

--- a/JobWebsiteMVC/wwwroot/css/site.css
+++ b/JobWebsiteMVC/wwwroot/css/site.css
@@ -1,23 +1,23 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
-a.navbar-brand {
+/*a.navbar-brand {
     white-space: normal;
     text-align: center;
     word-break: break-all;
-}
+}*/
 
 /* Provide sufficient contrast against white background */
-a {
+/*a {
     color: #0366d6;
-}
+}*/
 
 /*.main-body {
     max-height: 85vh !important;
     height: 85vh;
 }*/
 
-.btn-primary {
+/*.btn-primary {
     color: #fff;
     background-color: #1b6ec2;
     border-color: #1861ac;
@@ -27,11 +27,11 @@ a {
     color: #fff;
     background-color: #1b6ec2;
     border-color: #1861ac;
-}
+}*/
 
 /* Sticky footer styles
 -------------------------------------------------- */
-html {
+/*html {
     font-size: 14px;
 }
 
@@ -56,18 +56,18 @@ html {
 button.accept-policy {
     font-size: 1rem;
     line-height: inherit;
-}
+}*/
 
 /* Sticky footer styles
 -------------------------------------------------- */
-html {
+/*html {
     position: relative;
     min-height: 100%;
 }
 
-body {
+body {*/
     /* Margin bottom by footer height */
-    margin-bottom: 60px;
+    /*margin-bottom: 60px;
 }
 
 .footer {
@@ -75,10 +75,12 @@ body {
     bottom: 0;
     width: 100%;
     white-space: nowrap;
-    line-height: 60px; /* Vertically center the text there */
+    line-height: 60px;*/ /* Vertically center the text there */
+/*}*/
+
+main > .container{
+    padding-top: 60px;
 }
-
-
 
 .ui-autocomplete {
     max-height: 200px;
